Add argument of files
This commit is to add the argument "--files" which set formatting
file path.

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,5 +1,5 @@
 -   id: dotnet-format
     name: dotnet-format
-    entry: dotnet format
+    entry: dotnet format --files
     language: system
     files: '\.(cs|vb)$'
