Add new hook for executing dotnet test
This commit is to add the new hook which execute dotnet test command.
This hook is to need to have a argument "-p" or "--project".
It option is test project path
or  solution file path of including test project.

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,3 +3,8 @@
     entry: dotnet format --files
     language: system
     files: '\.(cs|vb)$'
+-   id: dotnet-test
+    name: dotnet Unit test
+    entry: dotnet-test.sh
+    language: script
+    files: '\*Test.(cs|vb)$'
